--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-     "start": "vite preview"
+  "start": "node index.js",
   },
   "dependencies": {
     "react-dom": "^19.1.0",
